...
    )
    DropdownMenu(
        expanded = expanded,
        onDismissRequest = { expanded = false },
        modifier = Modifier
            .width(with(LocalDensity.current) { textFieldSize.width.toDp() })
            .testTag("dropdown_menu")
    ) {
        data.forEach {
            DropdownMenuItem(onClick = {
                onSelect(it)
                expanded = false
            }) {
...
