...
                    bottom = 120.dp,
                    start = 16.dp,
                    end = 16.dp
                ),
                horizontalArrangement = Arrangement.spacedBy(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                modifier = Modifier.testTag("anime_list")
            ) {
                items(animeList, key = { it.first.id }) { (anime, _) ->
                    AnimeListItem(
                        title = anime.title,
                        coverImageUrl = anime.coverImageUrl,
                        rating = anime.rating,
...
